# TestApp

./: CMakeLists.txt  Doxyfile  README.md  data.proto  db.txt
Common/: CMakeLists.txt  Common.h  Exceptions.h
Reports/coverage/: index-sort-f.html  index-sort-l.html  index.html
Reports/coverage/Common/: Exceptions.h.func-sort-c.html  Exceptions.h.func.html  Exceptions.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Reports/coverage/client/src/: TCPClient.cpp.func-sort-c.html  TCPClient.cpp.func.html  TCPClient.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Reports/coverage/server/src/: MessagesHandler.h.func-sort-c.html  MessagesHandler.h.func.html  MessagesHandler.h.gcov.html  TCPServer.cpp.func-sort-c.html  TCPServer.cpp.func.html  TCPServer.cpp.gcov.html  dataStorageHandler.cpp.func-sort-c.html  dataStorageHandler.cpp.func.html  dataStorageHandler.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  socket_description.h.func-sort-c.html  socket_description.h.func.html  socket_description.h.gcov.html
Reports/doxygen/html/: _common_8cpp.html  _common_8cpp_source.html  _common_8h.html  _common_8h__dep__incl.map  _common_8h__dep__incl.md5  _common_8h__incl.map  _common_8h__incl.md5  _common_8h_source.html  _exceptions_8h.html  _exceptions_8h__dep__incl.map  _exceptions_8h__dep__incl.md5  _exceptions_8h__incl.map  _exceptions_8h__incl.md5  _exceptions_8h_source.html  _messages_handler_8h.html  _messages_handler_8h__dep__incl.map  _messages_handler_8h__dep__incl.md5  _messages_handler_8h__incl.map  _messages_handler_8h__incl.md5  _messages_handler_8h_source.html  _mockdata_storage_handler_8h.html  _mockdata_storage_handler_8h__dep__incl.map  _mockdata_storage_handler_8h__dep__incl.md5  _mockdata_storage_handler_8h__incl.map  _mockdata_storage_handler_8h__incl.md5  _mockdata_storage_handler_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _t_c_p_client_8cpp.html  _t_c_p_client_8cpp__incl.map  _t_c_p_client_8cpp__incl.md5  _t_c_p_client_8cpp_source.html  _t_c_p_client_8h.html  _t_c_p_client_8h__dep__incl.map  _t_c_p_client_8h__dep__incl.md5  _t_c_p_client_8h__incl.map  _t_c_p_client_8h__incl.md5  _t_c_p_client_8h_source.html  _t_c_p_server_8cpp.html  _t_c_p_server_8cpp__incl.map  (+224 more)
Reports/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+14 more)
client/: CMakeLists.txt  TCPClient.cpp  exceptions.h  main_client.cpp
client/src/: CMakeLists.txt  TCPClient.cpp  TCPClient.h
cmake/: CodeCoverage.cmake  clang-toolchain.cmake
server/: CMakeLists.txt  TCPServer.cpp  TCPServer.h  exceptions.h  main_server.cpp
server/src/: CMakeLists.txt  MessagesHandler.h  TCPServer.cpp  TCPServer.h  dataStorageHandler.cpp  dataStorageHandler.h  socket_description.h
utest/: CMakeLists.txt  FooTest.h  MockdataStorageHandler.h  TestCommunication.h  TestMessagesHandler.h  main.cpp
